# Ubuntu-AI-Boot-Agent

./: .gitignore  CLAUDE.md  README.md  build-deb.sh  install.sh  pyproject.toml  run.sh
app/: main.py
app/ubuntu_boot_agent/: __init__.py  __main__.py  analyzer.py  gui.py  log_capture.py
systemd/: ubuntu-boot-agent.service
